[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "flix-cli"
version = "1.7.9.1"
description = "A high efficient, powerful and fast movie scraper."
authors = ["DemonKingSwarn <rockingswarn@gmail.com>"]
license = "GPLv3"
readme = "readme.txt"

[tool.poetry.dependencies]
python = "^3.10"
httpx = "0.28.1"
beautifulsoup4 = "4.10.0"
regex = "2025.9.1"
krfzf-py = "0.0.4"
catt = "0.13.1"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
flix-cli = "flix_cli.__main__:__flixcli__"
