[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flix-cli"
version = "1.8.0"
description = "A high efficient, powerful and fast movie scraper."
authors = [{name = "DemonKingSwarn", email = "rockingswarn@gmail.com"}]
license = {text = "GPLv3"}
readme = "readme.txt"
requires-python = ">=3.11"
dependencies = [
    "httpx==0.28.1",
    "beautifulsoup4==4.10.0",
    "regex==2025.9.1",
    "krfzf-py==0.0.4",
    "catt==0.13.1",
    "yt-dlp>=2025.10.22",
]

[project.optional-dependencies]
dev = []

[project.scripts]
flix-cli = "flix_cli.__main__:__flixcli__"

[dependency-groups]
dev = [
    "ruff>=0.14.4",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
